--- a/EP/mac0121/EP2/Makefile
+++ b/EP/mac0121/EP2/Makefile
@@ -1,7 +1,7 @@
 CC:=gcc
 CFLAGS:=-Wall -pedantic -O2 -ansi
 
-EP2: EP2.o board.o stack.o 
+ep2: restaUm.o board.o stack.o 
 	$(CC) $(CFLAGS) -o $@ $^
 
 # General formulas (for making objects)
@@ -15,8 +15,3 @@ EP2: EP2.o board.o stack.o
 
 clean:
 	rm -f *.o
-
-upload: clean
-	git add --all
-	git commit
-	git push
