Added main for MAC0121 EP4

--- a/EP/mac0121/EP3/Makefile
+++ b/EP/mac0121/EP3/Makefile
@@ -1,5 +1,5 @@
 CC:=gcc
-CFLAGS:=-Wall -pedantic -O2 -ansi
+CFLAGS:=-Wall -pedantic -g -ansi
 
 ep3: tresReversao.o cvector.o stack.o 
 	$(CC) $(CFLAGS) -o $@ $^
