Finished. Must correct errors

--- a/EP/mac0121/EP4/Makefile
+++ b/EP/mac0121/EP4/Makefile
@@ -1,6 +1,7 @@
 CC:=gcc
-CFLAGS:=-Wall -pedantic -O2 -ansi
-DEPS:= tabelaSimbolo_AB.o tabelaSimbolo_LD.o tabelaSimbolo_LO.o tabelaSimbolo_VD.o tabelaSimbolo_VO.o
+CFLAGS:=-Wall -pedantic -g
+#-O2 -ansi
+DEPS:= str.o linkedlist.o tabelaSimbolo_AB.o tabelaSimbolo_LD.o tabelaSimbolo_LO.o tabelaSimbolo_VD.o tabelaSimbolo_VO.o
 
 tabelaSimbolo: tabelaSimbolo.o $(DEPS)
 	$(CC) $(CFLAGS) -o $@ $^
