Added EP4 and fixed ep3

--- a/EP/mac0121/EP4/EP4/Makefile
+++ b/EP/mac0121/EP4/EP4/Makefile
@@ -1,9 +1,8 @@
 CC:=gcc
-CFLAGS:=-Wall -pedantic -g
-#-O2 -ansi
+CFLAGS:=-Wall -pedantic -O2 -ansi
 DEPS:= str.o linkedlist.o tabelaSimbolo_AB.o tabelaSimbolo_LD.o tabelaSimbolo_LO.o tabelaSimbolo_VD.o tabelaSimbolo_VO.o
 
-tabelaSimbolo: tabelaSimbolo.o $(DEPS)
+ep4: tabelaSimbolo.o $(DEPS)
 	$(CC) $(CFLAGS) -o $@ $^
 
 # General formulas (for making objects)
